tests/invalid/syntax/const_no_value.nyx
// INVALID: const with no value
// Expected parse error: = and expression required in const statement
const MAX_SIZE: u32
